# pandapath

./: .env-example  .gitignore  .gitmodules  AGENTS.md  README.md  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/backend/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  setup.py
apps/backend/docs/: conf.py  database_module.rst  management.rst  modules.rst  nlp_operations.rst  open_ai.rst  rating.rst  route_optimalization.rst
apps/backend/src/: path.py
apps/backend/src/.doctrees/: database_module.doctree  index.doctree  ml_operations.doctree  path.doctree  rating.doctree
apps/backend/src/api_calls/: __init__.py  google_places.py  llama.py  weather.py  wikipedia_description.py
apps/backend/src/backend/: __init__.py  __main__.py  get_recommendation.py  get_recommendation_wibit.py  get_restaurants.py  get_trip_history.py  get_user_trip_history.py  main.py  requests.http  subcategories_to_db.py  wsgi.py
apps/backend/src/collaborative_filltering/: cf_users.py  dct.py  main.py  types.txt  user_preferences_rating.py
apps/backend/src/constants/: __init__.py  _categories.py  _outdoor.py  _restaurant.py  _restaurant_subcategories.py  _subcategories.py  types.py
apps/backend/src/data_model/: __init__.py  custom_decorators.py
apps/backend/src/data_model/city/: city.py
apps/backend/src/data_model/place/: place.py  place_subclasses.py  place_utils.py  place_visitor.py
apps/backend/src/data_model/places/: places.py  restaurants.py
apps/backend/src/data_model/user/: user.py  user_info.py  user_preferences.py
apps/backend/src/data_model/users/: dct.py  users.py
apps/backend/src/database/: __init__.py  database.py  db_utils.py  trip_database.py  user_database.py
apps/backend/src/ml_operations/: __init__.py  classify_points_to_centres.py  cluster_centres.py  kmeans.py  kmeans_constrained.py
apps/backend/src/model_comparison/: _test_doc2vec.py  download_models.py  main.py  single_keyword.py  utils.py  word2vec_comparison.py  word2vec_test.py
apps/backend/src/nlp_operations/: __init__.py  _absa.py  gensim_similarity.py  main.py  ner.py  pipelines.py  streszczanie_tekstu.py  translation.py  utils.py
apps/backend/src/rating/: confidence_rating.py  cumulative_rating.py  statistical_rating.py  user_preferences_rating.py
apps/backend/src/recommendation/: __init__.py  recommendation.py  solution.py
apps/backend/src/recommendation_wibit/: engine.py
apps/backend/src/route_optimalization/: __init__.py  dijkstra.py  graf_builder.py  haversine.py  routing.py  split_for_days.py
apps/backend/src/travel_time/: __init__.py  estimate_time_model.py  travel_time.py
apps/backend/src/wykresy/: displacy.py  ner_visualization.py  t-SNE.py
apps/backend/tests/backend/: test_main.py  test_main2.py  todo
apps/backend/tests/data_model/city/: test_city.py
apps/backend/tests/database/: test_db.py  test_user_db.py
apps/backend/tests/management/: city_desc.txt  test_get_attractions_for_city.py  test_get_restaurants_for_city.py  test_nearby_search.py  test_restaurant.py  test_wiki_desc.py
apps/backend/tests/nlp/: model_comparision.py  test_similarity.py
apps/backend/tests/others/: test_place.py
apps/backend/tests/rating/: confidence_rating.py  cumulative_rating.py  restaurants.py  statistical_rating.py  test_rating.py  user_preferences_rating.py
apps/backend/tests/recommendation/: test_calculate_nearest_place.py  test_search_restaurants.py
apps/backend/tests/route_optimization/: routing.py  split_for_days.py  test_dijkstra.py  test_haversine.py  test_travel_time.py
apps/backend/tests/test_ml_operations/: test_cluster_centres.py
apps/backend/tests/user/: test_user.py
apps/backend/time_estimation_models/: car_model.joblib  foot_model.joblib
docs/: backend.rst  conf.py  (+11 more)
(+127 files in other folders)
