[project]
name = "pandapath-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "absl-py>=2.1.0",
    "blinker>=1.7.0",
    "cachecontrol>=0.14.0",
    "cachetools>=5.3.3",
    "certifi>=2024.2.2",
    "cffi>=1.16.0",
    "charset-normalizer>=3.3.2",
    "click>=8.1.7",
    "colorama>=0.4.6",
    "contourpy>=1.2.0",
    "cors>=1.0.1",
    "credentials>=1.1",
    "cryptography>=42.0.5",
    "cycler>=0.12.1",
    "dataclasses-json>=0.6.7",
    "exceptiongroup>=1.2.0",
    "filelock>=3.13.1",
    "firebase-admin~=7.1.0",
    "firestore>=0.0.8",
    "flask[async]>=3.0.2",
    "flask-cors>=6.0.1",
    "folium>=0.20.0",
    "fonttools>=4.50.0",
    "future>=1.0.0",
    "gensim>=4.3.2",
    "gevent>=24.2.1",
    "google-api-core>=2.17.1",
    "google-api-python-client>=2.122.0",
    "google-auth>=2.28.2",
    "google-auth-httplib2>=0.2.0",
    "google-cloud-core>=2.4.1",
    "google-cloud-firestore>=2.15.0",
    "google-cloud-storage>=2.15.0",
    "google-crc32c>=1.5.0",
    "google-resumable-media>=2.7.0",
    "googleapis-common-protos>=1.63.0",
    "greenlet>=3.0.3",
    "grpcio>=1.62.1",
    "grpcio-status>=1.62.1",
    "httplib2>=0.22.0",
    "idna>=3.6",
    "immutabledict>=4.2.0",
    "iniconfig>=2.0.0",
    "iso8601>=2.1.0",
    "itsdangerous>=2.1.2",
    "jinja2>=3.1.3",
    "joblib>=1.3.2",
    "kiwisolver>=1.4.5",
    "markupsafe>=2.1.5",
    "matplotlib>=3.8.3",
    "msgpack>=1.0.8",
    "networkx>=3.4.2",
    "nltk>=3.8.1",
    "numpy>=1.26.4",
    "openmeteo-requests>=1.7.3",
    "ortools>=9.9.3963",
    "packaging>=24.0",
    "pandas>=2.2.1",
    "pillow>=10.2.0",
    "pluggy>=1.4.0",
    "proto-plus>=1.23.0",
    "protobuf>=4.25.3",
    "pyasn1>=0.5.1",
    "pyasn1-modules>=0.3.0",
    "pycparser>=2.21",
    "pyjwt>=2.8.0",
    "pyparsing>=3.1.2",
    "pysocks>=1.7.1",
    "pytest>=8.1.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
    "pytz>=2024.1",
    "regex>=2023.12.25",
    "requests>=2.31.0",
    "requests-cache>=1.2.1",
    "requests-file>=2.0.0",
    "retry-requests>=2.0.0",
    "rsa>=4.9",
    "scikit-learn>=1.2.2",
    "scipy>=1.12.0",
    "six>=1.16.0",
    "smart-open>=7.0.1",
    "threadpoolctl>=3.3.0",
    "tldextract>=5.1.1",
    "tomli>=2.0.1",
    "tqdm>=4.66.2",
    "twscrape>=0.17.0",
    "tzdata>=2024.1",
    "uritemplate>=4.1.1",
    "urllib3>=2.2.1",
    "werkzeug>=3.0.1",
    "wikipedia-api>=0.8.1",
    "wn>=0.9.5",
    "wrapt>=1.16.0",
    "zope-event>=5.0",
    "zope-interface>=6.2",
    "spacy>=3.8.7",
    "pyabsa>=2.4.3",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
