[project]
name = "capri-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dataclasses-json>=0.6.7",
    "flask[async]>=3.0.2",
    "flask-cors>=6.0.1",
    "joblib>=1.3.2",
    "matplotlib>=3.8.3",
    "networkx>=3.4.2",
    "numpy>=1.26.4",
	"openmeteo-requests>=1.7.3",
	"ortools>=9.9.3963",
	"pandas>=2.2.1",
	"python-dotenv>=1.0.1",
	"requests>=2.31.0",
	"waitress>=2.1.2",
	"requests-cache>=1.2.1",
	"retry-requests>=2.0.0",
	"scipy>=1.12.0",
	"wikipedia-api>=0.8.1",
	"scikit-learn>=1.2.2",
]

[project.optional-dependencies]
nlp = [
    "pyabsa>=2.4.3",
    "transformers>=4.29.2",
    "spacy>=3.8.7",
    "gensim>=4.3.2",
    "nltk>=3.8.1",
    "smart-open>=7.0.1",
]
docs = ["folium>=0.20.0", "pillow>=10.2.0"]
social = ["twscrape>=0.17.0"]
tests = ["pytest>=8.1.1"]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
